--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ backports.zoneinfo==0.2.1
 Django==4.0.1
 django-pdfkit==0.3.1
 EasyProcess==1.1
+gunicorn==20.1.0
 pdfkit==0.6.0
 psycopg2==2.9.3
 PyVirtualDisplay==2.2
